[package]
name = "no-std-merkle"
version = "0.1.0"
edition = "2021"
authors = ["James Prestwich <james@nomad.xyz>", "The Nomad Developers <eng@nomad.xyz>"]
description = "Nomad sparse merle tree"
repository = "https://github.com/nomad-xyz/rust"
license = "MIT OR Apache-2.0"
exclude = [
    "*.sh",
    ".git*"
]

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
primitive-types = { version = "0.11.1", default-features = false, features = ["byteorder", "rustc-hex"] }
sha3 = "0.9.1"
once_cell = "1.8.0"
thiserror-no-std = "2.0.2"

[features]
default = ["std"]
std = []