[package]
name = "no-std-merkle"
version = "0.1.0"
edition = "2021"
authors = ["James Prestwich <james@nomad.xyz>", "The Nomad Developers <eng@nomad.xyz>"]
description = "Nomad sparse merle tree"
repository = "https://github.com/nomad-xyz/rust"
license = "MIT OR Apache-2.0"
exclude = [
    "*.sh",
    ".git*"
]

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
primitive-types = { version = "0.11.1", default-features = false}
tiny-keccak = { version = "2.0.2", default-features = false, features = ["keccak"] }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
thiserror-no-std = "2.0.2"

[dev-dependencies]
primitive-types = { version = "0.11.1", default-features = false, features = ["byteorder", "rustc-hex"] }

[features]
default = ["std"]
std = []